samples/_failures_safe/1761627958_2f431f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c15c29f1.c:132:1: error: expected identifier or ‘(’ at end of input
  132 | void
      | ^~~~
